--- a/pair.html
+++ b/pair.html
@@ -7,207 +7,219 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <style>
     body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Roboto', Arial, sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      margin: 0;
-      background: linear-gradient(to bottom, #ffffff, #ebebeb);
-      font-family: Arial, sans-serif;
+      background: url('https://iili.io/24zBVF1.png') no-repeat center center fixed; /* Set your image URL here */
+      background-size: cover;
+      color: white;
     }
 
     .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .box {
-      width: 300px;
-      height: 320px;
-      padding: 20px;
-      position: relative;
       text-align: center;
-      background-color: #fff;
-      border-radius: 10px;
-      transform: perspective(1000px) rotateY(0deg);
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
-      position: relative;
+      padding: 25px;
+      background: rgba(0, 0, 0, 0.5); /* Darker background for contrast */
+      border-radius: 20px;
+      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.7);
+      backdrop-filter: blur(5px);
+      width: 100%;
+      max-width: 400px;
     }
 
-    #text {
-      color: #000; /* Set the text color to black (#000) */
+    .container h3 {
+      margin: 0 0 10px;
+      font-size: 1.8rem;
+      color: #fff;
     }
 
-    .input-container input {
-      color: #000; /* Set the text color to black (#000) */
-    }
-
-    .centered-text {
-      color: #000; /* Set the text color to black (#000) */
+    .container h6 {
+      margin: 10px 0;
+      font-size: 1rem;
+      color: #f0f0f0;
     }
 
     .input-container {
       display: flex;
-      background: white;
-      border-radius: 1rem;
-      background: linear-gradient(45deg, #c5c5c5 0%, #ffffff 100%);
-      box-shadow: 20px 20px 20px #d8d8d8, -10px -10px 20px #f8f8f8;
-      padding: 0.3rem;
-      gap: 0.3rem;
-      max-width: 300px; /* Set your desired maximum width */
-      width: 100%;
+      justify-content: space-between;
+      align-items: center;
+      background: rgba(255, 255, 255, 0.2);
+      border-radius: 10px;
+      overflow: hidden;
+      margin-top: 20px;
     }
 
-    .input-container input {
-      border-radius: 0.8rem 0 0 0.8rem;
-      background: #e8e8e8;
-      box-shadow: inset 13px 13px 10px #dcdcdc, inset -13px -13px 10px #f4f4f4;
-      width: 100%;
-      flex-basis: 75%;
-      padding: 1rem;
+    .input-container select, .input-container input {
+      flex: 1;
+      padding: 12px;
+      font-size: 1.1rem;
       border: none;
-      border-left: 2px solid #4998FF;
-      color: #5e5e5e;
-      transition: all 0.2s ease-in-out;
+      background: transparent;
+      color: #fff;
+      outline: none;
     }
 
-    .input-container input:focus {
-      border-left: 2px solid #4998FF;
-      outline: none;
-      box-shadow: inset 13px 13px 10px #BFF0FA, inset -13px -13px 10px #f4f4f4;
+    .input-container input::placeholder, .input-container select {
+      color: #ddd;
     }
 
     .input-container button {
-      flex-basis: 25%;
-      padding: 1rem;
-      background: linear-gradient(135deg, #BFF0FA 0%, #4998FF 100%);
-      font-weight: 900;
-      letter-spacing: 0.3rem;
-      text-transform: uppercase;
-      color: white;
+      padding: 12px 20px;
+      font-size: 1.1rem;
+      font-weight: bold;
+      color: #fff;
+      background: #ff7b54;
       border: none;
-      width: 100%;
-      border-radius: 0 1rem 1rem 0;
-      transition: all 0.2s ease-in-out;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     }
 
     .input-container button:hover {
-      background: linear-gradient(135deg, #BFF0FA 0%, #4998ffc4 100%);
+      background: #ff5722;
+      transform: scale(1.05); /* Slight scaling effect */
+      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
     }
 
-    @media (max-width: 500px) {
-      .input-container {
-        flex-direction: column;
+    #waiting-message {
+      margin-top: 20px;
+      display: none;
+      font-size: 1rem;
+      color: #f0f0f0;
+    }
+
+    #pair {
+      margin-top: 25px;
+      font-size: 1.1rem;
+      font-weight: bold;
+      color: #ff7b54;
+    }
+
+    footer {
+      margin-top: 25px;
+      font-size: 0.9rem;
+      color: #ddd;
+    }
+
+    footer a {
+      color: #ff7b54;
+      text-decoration: none;
+    }
+
+    footer a:hover {
+      text-decoration: underline;
+    }
+
+    @media (max-width: 400px) {
+      .container {
+        width: 90%;
+        padding: 15px;
       }
 
-      .input-container input {
-        border-radius: 0.8rem;
+      .input-container select, .input-container input {
+        font-size: 1rem;
       }
 
       .input-container button {
-        padding: 1rem;
-        border-radius: 0.8rem;
-      }
-    }
-
-    .centered-text {
-      text-align: center;
-    }
-
-    @media (max-width: 500px) {
-      .box {
-        width: 90%; 
-      }
-    }
-
-    @media (max-width: 500px) {
-      .input-container input {
-        border-radius: 0.8rem;
-        width: 80%; 
-      }
-
-      .input-container button {
-        padding: 1rem;
-        border-radius: 0.9rem;
-        width: 100%; 
+        font-size: 1rem;
+        padding: 10px;
       }
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <div class="main">
-      <div class="box" id="box">
-        <div id="text">
-          <i class="fa fa-user"></i>
-          <p>
-            <h3 class="centered-text">© GlobalTechInfo</h3>
-            <br>
-            <h6>Enter your number with a country code.</h6>
-            <div class="input-container">
-              <input placeholder="923444844060" type="number" id="number" placeholder="Enter your phone number with a country code" name="">
-              <button id="submit">Submit</button>
-            </div>
-            
-            <a id="waiting-message" class="centered-text" style="display: none;">Please wait for some time</a>
-            <br>
-            <br>
-            <main id="pair"></main>
-          </p>
-        </div>
-      </div>
+    <h3>Pair with RedFox✅️</h3>
+    <h6>Enter your phone number and select your country code.❄️</h6>
+    <div class="input-container">
+      <select id="country">
+        <!-- Country code options will be inserted here -->
+      </select>
+      <input id="number" type="number" placeholder="763107140">
     </div>
+
+    <p id="waiting-message">Please wait for some time...</p>
+    <main id="pair"></main>
+    <button id="submit">Get Code</button>
+
+    <footer>
+      Powered by <a href="https://redfox-inc.22web.org/">©RedFox-Coders™</a>
+    </footer>
   </div>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js"></script>
   <script>
-    let a = document.getElementById("pair");
-    let b = document.getElementById("submit");
-    let c = document.getElementById("number");
-    let box = document.getElementById("box");
+    const countryCodes = {
+      "Sri Lanka": "+94",
+      "Afghanistan": "+93",
+      "Albania": "+355",
+      "Algeria": "+213",
+      "Australia": "+61",
+      "United States": "+1",
+      // Add more countries here...
+    };
 
-    async function Copy() {
+    // Populate the select dropdown with country options
+    const countrySelect = document.getElementById("country");
+    for (const country in countryCodes) {
+      const option = document.createElement("option");
+      option.value = countryCodes[country];
+      option.textContent = `${country} (${countryCodes[country]})`;
+      countrySelect.appendChild(option);
+    }
+
+    let pairOutput = document.getElementById("pair");
+    let submitButton = document.getElementById("submit");
+    let phoneNumberInput = document.getElementById("number");
+    let waitingMessage = document.getElementById("waiting-message");
+
+    async function copyCode() {
       let text = document.getElementById("copy").innerText;
+      await navigator.clipboard.writeText(text.replace("CODE: ", ""));
       let obj = document.getElementById("copy");
-      await navigator.clipboard.writeText(obj.innerText.replace('CODE: ', ''));
       obj.innerText = "COPIED";
-      obj.style = "color:blue;font-weight:bold";
-      obj.size = "5";
+      obj.style.color = "blue";
       setTimeout(() => {
         obj.innerText = text;
-        obj.style = "color:black;font-weight-bold";
-        obj.size = "5";
+        obj.style.color = "red";
       }, 500);
     }
 
-    b.addEventListener("click", async (e) => {
+    submitButton.addEventListener("click", async (e) => {
       e.preventDefault();
-      if (!c.value) {
-        a.innerHTML = '<a style="color:black;font-weight:bold">Enter your WhatsApp number with a country code</a><br><br>';
-      } else if (c.value.replace(/[^0-9]/g, "").length < 11) {
-        a.innerHTML = '<a style="color:black;font-weight:bold">Invalid number format</a><br><br>';
-      } else {
-        const bc = c.value.replace(/[^0-9]/g, "");
-        let bb = "";
-        let bbc = "";
-        const cc = bc.split('');
-        cc.map(a => {
-          bbc += a;
-          if (bbc.length == 3) {
-            bb += " " + a;
-          } else if (bbc.length == 8) {
-            bb += " " + a;
-          } else {
-            bb += a;
-          }
-        });
-        c.type = "text";
-        c.value = "+" + bb;
-        c.style = "color:black;font-size:20px";
-        a.innerHTML = '<a style="color:black;font-weight:bold">Please wait for some time</a><br><br>';
-        let { data } = await axios(`/code?number=${bc}`);
+      if (!phoneNumberInput.value || !countrySelect.value) {
+        pairOutput.innerHTML = '<p style="color: white;">Please enter your number with the country code.</p>';
+        return;
+      }
+
+      const countryCode = countrySelect.value.replace(/[^0-9]/g, "");
+      const formattedNumber = phoneNumberInput.value.replace(/[^0-9]/g, "");
+      const lastnumber = `${countryCode}` + `${formattedNumber}`;
+
+      if (lastnumber.length < 11) {
+        pairOutput.innerHTML = '<p style="color: white;">Invalid number format.</p>';
+        return;
+      }
+
+      phoneNumberInput.value = "+" + lastnumber;
+      phoneNumberInput.style.color = "white";
+      waitingMessage.style.display = "block";
+
+      try {
+        let { data } = await axios(`/code?number=${lastnumber}`);
         let code = data.code || "Service Unavailable";
-        a.innerHTML = '<font id="copy" onclick="Copy()" style="color:red;font-weight:bold" size="5">CODE: <span style="color:black;font-weight:bold">' + code + '</span></font><br><br><br>';
+        pairOutput.innerHTML = `
+          <p id="copy" onclick="copyCode()" style="color: red; cursor: pointer;">
+            CODE: <span style="color: white;">${code}</span>
+          </p>`;
+      } catch (error) {
+        pairOutput.innerHTML = '<p style="color: white;">Error fetching code. Please try again.</p>';
+      } finally {
+        waitingMessage.style.display = "none";
       }
     });
   </script>
